--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8" />
 	<title>Виктор Веденин – курсовой проект</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" type="text/css" href="components/main.css">
-	<script src="components/show/show.js"></script>
+	<link rel="stylesheet" type="text/css" href="components/app/app.css">
+	<script src="components/TVshow/TVshow.js"></script>
 </head>
 <body>
 
