--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 	<meta charset="utf-8" />
 	<title>Виктор Веденин – курсовой проект</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" type="text/css" href="components/main.css">
-	<script src="components/show/show.js"></script>
+	<link rel="stylesheet" type="text/css" href="components/app/app.css">
+	<script src="components/TVshow/TVshow.js"></script>
+	<script src="components/addNewShow/addNewShow.js"></script>
 </head>
 <body>
 
 	<h1>Последние просмотренные серии</h1>
 	<div class="app">
-
 		<div class="tvshow show1"></div>
 		<div class="tvshow show2"></div>
-
 	</div>
 
 	<script src="components/app/app.js"></script>
