--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<title>Виктор Веденин – курсовой проект</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" type="text/css" href="components/app/app.css">
+	<link rel="stylesheet" type="text/css" href="components/addNewShow/add.css">
 	<script src="components/TVshow/TVshow.js"></script>
-	<!-- <script src="components/addNewShow/addNewShow.js"></script> -->
+	<script src="components/addNewShow/addNewShow.js"></script>
 </head>
 <body>
 
