--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" type="text/css" href="components/app/app.css">
 	<link rel="stylesheet" type="text/css" href="components/addNewShow/add.css">
+	<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
 	<script src="components/TVshow/TVshow.js"></script>
 	<script src="components/addNewShow/addNewShow.js"></script>
 </head>
 <body>
-
 	<h1>Последние просмотренные серии</h1>
-	<div class="app">
-		<div class="tvshow show1"></div>
-		<div class="tvshow show2"></div>
-	</div>
+	<div class="app"> </div>
 
 	<script src="components/app/app.js"></script>
 </body>
